# python-rapidminer

./: .gitignore  CHANGES.md  README.md  pyproject.toml  setup.py
docs/api/: Connections.md  Project.md  Scoring.md  Server.md  Studio.md  WebApi.md
docs/install/: ServerInstallFromServerUI.md  ServerInstallFromStudio.md
examples/: project_examples.ipynb  server_examples.ipynb  studio_examples.ipynb
rapidminer/: __init__.py
rapidminer/core/: __init__.py  config.py  connections.py  connector.py  oauthenticator.py  project.py  resources.py  scoring.py  serdeutils.py  server.py  studio.py  utilities.py  web_api.py  webservice.py
rapidminer/rapidminer/: __init__.py
rapidminer/rapidminer/core/: __init__.py  config.py  connections.py  connector.py  oauthenticator.py  resources.py  scoring.py  utilities.py
